change num_augmentations to remain consistent at 3

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
     "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
     "        os.makedirs(output_dir)\n",
-    "    for image_name in range(len(image_list)): # <------------------------------ Change for full dataset len(image_list)\n",
+    "    for image_name in range(30): # <------------------------------ Change for full dataset len(image_list)\n",
     "        image_name = image_list[image_name]\n",
     "        image_path = os.path.join(training_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,9 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4522\n",
+      "4522\n"
+     ]
+    }
+   ],
    "source": [
     "'''DATA AUGMENTATION'''\n",
     "\n",
@@ -398,6 +407,9 @@
     "    df_undersampled = pd.concat([majority_undersampled, minority])\n",
     "    df_ordered = df_undersampled.sort_values(by=\"image\").reset_index(drop=True)\n",
     "\n",
+    "    # print(df_ordered[df_ordered[\"MEL\"] == 0].shape[0])\n",
+    "    # print(df_ordered[df_ordered[\"MEL\"] == 1].shape[0])\n",
+    "\n",
     "    df_ordered.to_csv(new_labels_path, index=False)\n",
     "    #print(len(df_ordered))\n",
     "\n",
@@ -414,17 +426,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ISIC_0000002', 'ISIC_0000004', 'ISIC_0000013', 'ISIC_0000022_downsampled', 'ISIC_0000026_downsampled']\n",
-      "ISIC_0000002.jpg\n",
-      "../preprocessed_images/ISIC_0000002.jpg\n",
-      "ISIC_0000004.jpg\n",
-      "../preprocessed_images/ISIC_0000004.jpg\n",
-      "ISIC_0000013.jpg\n",
-      "../preprocessed_images/ISIC_0000013.jpg\n",
-      "ISIC_0000022_downsampled.jpg\n",
-      "../preprocessed_images/ISIC_0000022_downsampled.jpg\n",
-      "ISIC_0000026_downsampled.jpg\n",
-      "../preprocessed_images/ISIC_0000026_downsampled.jpg\n"
+      "3\n",
+      "3\n"
      ]
     }
    ],
@@ -448,7 +451,7 @@
     "    ])\n",
     "    return transformation\n",
     "\n",
-    "def augment_image(image, transformation, num_augmentations=5):\n",
+    "def augment_image(image, transformation, num_augmentations):\n",
     "    augmented_images = []\n",
     "    # image = cv2.imread(image_path)\n",
     "    for _ in range(num_augmentations):\n",
@@ -456,7 +459,7 @@
     "        augmented_images.append(augmented)\n",
     "    return augmented_images\n",
     "\n",
-    "def augment_data(input, output, num_augmentations=5):\n",
+    "def augment_data(input, output, num_augmentations):\n",
     "    if not os.path.exists(output):\n",
     "        os.makedirs(output)\n",
     "\n",
@@ -467,7 +470,7 @@
     "\n",
     "    # print(all_melanoma[:5]) \n",
     "\n",
-    "    for image_name in all_melanoma[:5]: # <------------------------------ Change for all_melanoma images \n",
+    "    for image_name in all_melanoma[:1]: # <------------------------------ Change for all_melanoma images \n",
     "        image_name = image_name + \".jpg\"\n",
     "        # print(image_name)\n",
     "        image = os.path.join(input, image_name).replace(\"\\\\\", \"/\")\n",
@@ -492,7 +495,7 @@
     "            \n",
     "            cv2.imwrite(aug_path, aug_img)\n",
     "\n",
-    "augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
+    "# augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
    ]
   }
  ],
