added timing to see how much time it takes per 1000 images

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,14 +303,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output directory already exists, deleting\n"
+      "Output directory already exists, deleting\n",
+      "Preprocessing image 1000/25331\n",
+      "Preprocessing image 2000/25331\n",
+      "Preprocessing image 3000/25331\n",
+      "Preprocessing image 4000/25331\n",
+      "Preprocessing image 5000/25331\n",
+      "Preprocessing image 6000/25331\n",
+      "Preprocessing image 7000/25331\n",
+      "Preprocessing image 8000/25331\n",
+      "Preprocessing image 9000/25331\n",
+      "Preprocessing image 10000/25331\n",
+      "Preprocessing image 11000/25331\n",
+      "Preprocessing image 12000/25331\n",
+      "Preprocessing image 13000/25331\n",
+      "Preprocessing image 14000/25331\n",
+      "Preprocessing image 15000/25331\n",
+      "Preprocessing image 16000/25331\n",
+      "Preprocessing image 17000/25331\n",
+      "Preprocessing image 18000/25331\n",
+      "Preprocessing image 19000/25331\n",
+      "Preprocessing image 20000/25331\n",
+      "Preprocessing image 21000/25331\n",
+      "Preprocessing image 22000/25331\n",
+      "Preprocessing image 23000/25331\n",
+      "Preprocessing image 24000/25331\n",
+      "Preprocessing image 25000/25331\n"
      ]
     }
    ],
@@ -342,7 +367,12 @@
     "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
     "        os.makedirs(output_dir)\n",
-    "    for image_name in range(30): # <------------------------------ Change for full dataset len(image_list)\n",
+    "    \n",
+    "    i = 0\n",
+    "    for image_name in range(len(image_list)): # <------------------------------ Change for full dataset len(image_list)\n",
+    "        i += 1\n",
+    "        if i % 1000 == 0:\n",
+    "            print(f\"Preprocessing image {i}/{len(image_list)}\")\n",
     "        image_name = image_list[image_name]\n",
     "        image_path = os.path.join(training_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
@@ -354,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,18 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4522\n",
-      "4522\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''DATA AUGMENTATION'''\n",
     "\n",
@@ -419,18 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def data_augmentation():\n",
