--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a5136d6d",
    "metadata": {},
    "outputs": [
@@ -41,44 +41,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.19.0\n"
+      "2.16.2\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "import matplotlib.pyplot as plt\n",
     "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
+   "id": "1f76431b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_process_images(image_path):\n",
+    "    image_path += \".jpg\"\n",
+    "    img = load_img(image_path)\n",
+    "    img_array = img_to_array(img)\n",
+    "\n",
+    "    img_array = img_array / 255.0\n",
+    "    return img_array\n",
+    "\n",
+    "\n",
+    "def get_all_data(all_images, labels, path):\n",
+    "    images = []\n",
+    "    all_labels = []\n",
+    "\n",
+    "    for img, label in zip(all_images, labels):\n",
+    "        img_path = os.path.join(path, img).replace(\"\\\\\", \"/\")\n",
+    "        img_pixels = load_process_images(img_path)\n",
+    "\n",
+    "        images.append(img_pixels)\n",
+    "        all_labels.append(label)\n",
+    "    \n",
+    "    return np.array(images), np.array(all_labels)\n",
+    "\n",
+    "\n",
+    "def build_model():\n",
+    "\n",
+    "    # random bs\n",
+    "    model = models.Sequential([\n",
+    "        \n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(224, 224, 3)),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        \n",
+    "        layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        \n",
+    "        layers.Conv2D(128, (3, 3), activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        \n",
+    "        layers.Conv2D(256, (3, 3), activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        \n",
+    "        layers.Flatten(),\n",
+    "        layers.Dropout(0.5),\n",
+    "        layers.Dense(512, activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Dropout(0.5),\n",
+    "        layers.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    \n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "552f9f5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# File paths\n",
     "labels_path = \"../preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\"\n",
-    "images_path = \"../augmented_images\""
+    "images_path = \"../preprocessed_images\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1f9bb842",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train set size:  7235\n",
-      "Test set size:  1809\n"
+      "C:\\Users\\anony\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
      ]
     }
    ],
@@ -93,13 +162,17 @@
     "image_names = df['image'].values # X - images\n",
     "image_labels = df['MEL'].values # y - labels\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(image_names, image_labels, test_size=0.2, random_state=88, stratify=image_labels)\n",
+    "X_train_names, X_test_names, y_train, y_test = train_test_split(image_names, image_labels, \n",
+    "                                                    test_size=0.2, random_state=88, stratify=image_labels)\n",
     "\n",
-    "print(\"Train set size: \", len(X_train))\n",
-    "print(\"Test set size: \", len(X_test))\n",
+    "# print(\"Train set size: \", len(X_train))\n",
+    "# print(\"Test set size: \", len(X_test))\n",
     "\n",
+    "X_train, y_train = get_all_data(X_train_names, y_train, images_path)\n",
     "\n",
-    "\n"
+    "X_testing, y_testing = get_all_data(X_test_names, y_test, images_path)\n",
+    "\n",
+    "model = build_model()\n"
    ]
   },
   {
@@ -107,19 +180,102 @@
    "execution_count": null,
    "id": "3a77dea6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting training...\n",
+      "Epoch 1/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m265s\u001b[0m 1s/step - accuracy: 0.6058 - auc_1: 0.6471 - loss: 0.9412 - val_accuracy: 0.5003 - val_auc_1: 0.5637 - val_loss: 1.0364\n",
+      "Epoch 2/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 1s/step - accuracy: 0.6598 - auc_1: 0.7136 - loss: 0.6585 - val_accuracy: 0.5832 - val_auc_1: 0.7360 - val_loss: 0.7525\n",
+      "Epoch 3/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m229s\u001b[0m 1s/step - accuracy: 0.6792 - auc_1: 0.7485 - loss: 0.6090 - val_accuracy: 0.6175 - val_auc_1: 0.7505 - val_loss: 0.7260\n",
+      "Epoch 4/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m220s\u001b[0m 968ms/step - accuracy: 0.6969 - auc_1: 0.7609 - loss: 0.5888 - val_accuracy: 0.6733 - val_auc_1: 0.7572 - val_loss: 0.6084\n",
+      "Epoch 5/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m200s\u001b[0m 882ms/step - accuracy: 0.7207 - auc_1: 0.7925 - loss: 0.5541 - val_accuracy: 0.5064 - val_auc_1: 0.6564 - val_loss: 1.2606\n",
+      "Epoch 6/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m239s\u001b[0m 1s/step - accuracy: 0.6945 - auc_1: 0.7591 - loss: 0.5876 - val_accuracy: 0.6197 - val_auc_1: 0.7169 - val_loss: 0.7925\n",
+      "Epoch 7/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m241s\u001b[0m 1s/step - accuracy: 0.6988 - auc_1: 0.7715 - loss: 0.5708 - val_accuracy: 0.6423 - val_auc_1: 0.7415 - val_loss: 0.6434\n",
+      "Epoch 8/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m210s\u001b[0m 921ms/step - accuracy: 0.7271 - auc_1: 0.8009 - loss: 0.5407 - val_accuracy: 0.5047 - val_auc_1: 0.6734 - val_loss: 1.0002\n",
+      "Epoch 9/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 1s/step - accuracy: 0.7211 - auc_1: 0.7964 - loss: 0.5458 - val_accuracy: 0.6965 - val_auc_1: 0.7638 - val_loss: 0.5731\n",
+      "Epoch 10/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 1s/step - accuracy: 0.7489 - auc_1: 0.8276 - loss: 0.5103 - val_accuracy: 0.6915 - val_auc_1: 0.7698 - val_loss: 0.6205\n",
+      "Epoch 11/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m199s\u001b[0m 877ms/step - accuracy: 0.7430 - auc_1: 0.8334 - loss: 0.5007 - val_accuracy: 0.6374 - val_auc_1: 0.7167 - val_loss: 0.6418\n",
+      "Epoch 12/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 1s/step - accuracy: 0.7595 - auc_1: 0.8302 - loss: 0.5095 - val_accuracy: 0.6711 - val_auc_1: 0.7509 - val_loss: 0.6035\n",
+      "Epoch 13/50\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1805s\u001b[0m 8s/step - accuracy: 0.7600 - auc_1: 0.8426 - loss: 0.4909 - val_accuracy: 0.5113 - val_auc_1: 0.7146 - val_loss: 0.9135\n",
+      "Epoch 14/50\n",
+      "\u001b[1m128/227\u001b[0m \u001b[32m━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━\u001b[0m \u001b[1m1:53\u001b[0m 1s/step - accuracy: 0.7406 - auc_1: 0.8269 - loss: 0.5082"
+     ]
+    }
+   ],
    "source": [
-    "# Load images\n",
-    "for image in image_names:\n",
-    "    image = image + '_aug_1.jpg'\n",
-    "    if not os.path.exists(os.path.join(images_path, image)):\n",
-    "        print(f\"Image {image} not found in {images_path}\")"
+    "#CONSTANTS\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 50\n",
+    "\n",
+    "\n",
+    "model = build_model()\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=['accuracy', tf.keras.metrics.AUC()]\n",
+    ")\n",
+    "\n",
+    "# Callbacks\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    patience=10,\n",
+    "    restore_best_weights=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Train the model\n",
+    "print(\"Starting training...\")\n",
+    "history = model.fit(\n",
+    "    X_train, y_train,\n",
+    "    batch_size=32,\n",
+    "    epochs=EPOCHS,\n",
+    "    validation_data=(X_testing, y_testing),\n",
+    "    callbacks=[early_stopping]\n",
+    ")\n",
+    "\n",
+    "# Plot training history\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(history.history['loss'], label='Training Loss')\n",
+    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "plt.title('Model Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.title('Model Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
