wrote todos for training and evaluating model

--- a/model_training/nathan_audrey.ipynb
+++ b/model_training/nathan_audrey.ipynb
@@ -79,7 +79,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO: train the model\n",
+    "\n",
+    "# we will probably start with around 50 epochs and go from there (recommended is from 50-100)\n",
+    "# implement early stopping to prevent overfitting and saves time\n",
+    "# decrease epochs if overfitting, increase if underfitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: evaluate the model\n",
+    "\n",
+    "# display important statistics like accuracy, loss, etc to see how well the model is performing"
+   ]
   }
  ],
  "metadata": {
