Separate preprocessing into separate cells

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -354,16 +354,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e57e87",
+   "id": "c38b9352",
    "metadata": {},
    "source": [
-    "#### Preprocess All Images"
+    "#### Load DataFrame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38debea",
+   "id": "1822f204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,12 +373,24 @@
     "print(df.head())\n",
     "\n",
     "# === Melanoma vs. Non-Melanoma ===\n",
-    "num_melanoma(df)  # Display the number of melanoma vs non-melanoma images\n",
-    "\n",
-    "\n",
-    "# === Preprocessing ===\n",
-    "\n",
-    "# === Data Augmentation Step ===\n",
+    "num_melanoma(df)  # Display the number of melanoma vs non-melanoma images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e57e87",
+   "metadata": {},
+   "source": [
+    "#### Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b38debea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "transform = A.Compose([\n",
     "    A.Rotate(limit=30, p=0.5), # limit 30 degrees\n",
     "    A.HorizontalFlip(p=0.5), \n",
@@ -388,9 +400,24 @@
     "augment_data(output_folder, transform, df)\n",
     "\n",
     "df_balanced = pd.read_csv(balanced_csv_path)\n",
-    "num_melanoma(df_balanced)  # Display the number of melanoma vs non-melanoma images\n",
-    "\n",
-    "# === Resize Images ===\n",
+    "num_melanoma(df_balanced)  # Display the number of melanoma vs non-melanoma images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e41f944c",
+   "metadata": {},
+   "source": [
+    "#### Resize Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b064351",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Resize all images in the output folder to 224x224\n",
     "print(\"\\nResizing images to 224x224...\")\n",
     "resize_images(output_folder)\n",
